--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "numpy>=2.3.2",
+    "numpy-stl>=3.2.0",
     "opencv-python>=4.11.0.86",
     "pillow>=11.3.0",
     "scikit-learn>=1.7.2",
