--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "numpy>=2.3.2",
     "numpy-stl>=3.2.0",
     "opencv-python>=4.11.0.86",
+    "optuna>=4.6.0",
+    "pandas>=2.3.3",
     "pillow>=11.3.0",
     "scikit-learn>=1.7.2",
     "torch>=2.8.0",
